# UdemyCopy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main_test.yml
apps/course/: managers.py  models.py
apps/user/: admin.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
apps/user/services/: constants.py  creators.py  service_get.py  tokens.py  validators.py
apps/user/templates/: reset_password_email.html
apps/user/tests/: test_api.py  test_auth.py  test_urls.py
settings/: celery.py  loginng_formatters.py  settings.py  urls.py  yasg.py
settings/Logging/: warning.json
